@@ -766,6 +766,8 @@
                 </TD>
                 <TD>
                     <INPUT TYPE=TEXT SIZE=60 MAXLENGTH=255 NAME=HERESTATS VALUE="@AbilityData?HERESTATS@">
+                    <BR>
+                    <FONT SIZE=-1 COLOR=WHITE>@x1=caster level, @x2=target level, @x3=level expertise, @x4-@x8=x1-x5 expertise, @x9=adjusted caster level</FONT>
                 </TD>
             </TR>
             <TR>
@@ -861,7 +863,7 @@
                 <TD>
                     <INPUT TYPE=TEXT SIZE=40 MAXLENGTH=255 NAME=POSTCASTDAMAGE VALUE="@AbilityData?POSTCASTDAMAGE@">
                     <BR>
-                    <FONT SIZE=-1 COLOR=WHITE>@x1=caster level, @x2=target level, @x3=level expertise, @x4-@x8=x1-x5 expertise</FONT>
+                    <FONT SIZE=-1 COLOR=WHITE>@x1=caster level, @x2=target level, @x3=level expertise, @x4-@x8=x1-x5 expertise, @x9=adjusted caster level</FONT>
                 </TD>
             </TR>
         @endif@
